fix(email): make primary buttons visible on bomile

--- a/app/client/stylesheets/components/pu-button-revealing-input.sass
+++ b/app/client/stylesheets/components/pu-button-revealing-input.sass
@@ -1,17 +1,20 @@
 .pu-button-revealing-input
-    display: table
+    display: block
     width: 100%
 
     &__input, &__button
-        display: table-cell
+        display: inline-block
         vertical-align: top
         white-space: nowrap
+        margin-right: 10px
+        width: 100%
 
     &__input
         width: 100%
+        margin-bottom: 10px
 
     &__button
-        display: none
+        text-align: right
 
         .pu-button-2
             height: 45px
@@ -19,6 +22,23 @@
 
     &:hover
         .pu-button-revealing-input__button
+            display: inline-block
+
+    @media screen and (min-width: $breakpoint-phablet)
+        display: table
+
+        &__button
+            width: auto
+
+        &__input, &__button
             display: table-cell
 
+        &:hover
+            .pu-button-revealing-input__button
+                display: table-cell
 
+    @media screen and (min-width: $breakpoint-tablet + 1px)
+
+
+        &__button
+            display: none
